# amiya-say

./: Cargo.toml  LICENSE  README.md  RELEASE_NOTE.md
resources/roles/: amiya.bilibili.txt  amiya.term.txt  amiya2.bilibili.txt  amiya2.term.txt  amiya3.bilibili.txt  amiya3.term.txt  andreana.bilibili.txt  andreana.term.txt  doctor.bilibili.txt  doctor.term.txt  kaltsit.bilibili.txt  kaltsit2.bilibili.txt  plankton.bilibili.txt  plankton.term.txt  silverash.bilibili.txt  silverash.term.txt  sitting_cat.bilibili.txt  sitting_cat.term.txt  spine.bilibili.txt  spongebob.bilibili.txt  spongebob.term.txt
src/: dialog.rs  fuzzyset.rs  lib.rs  main.rs
